fix bug on tablet+ screen sizes caused by animations

--- a/src/components/Projects/components/ProjectModal/ProjectModal.scss
+++ b/src/components/Projects/components/ProjectModal/ProjectModal.scss
@@ -47,6 +47,7 @@ div.ProjectModal {
     div.modal-card {
       position: fixed;
       z-index: 999 !important;
+      top: 0;
 
       height: 100%;
       width: 100vw;
